// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`takes snapshot of state changes 1`] = `
Array [
  <center>
    <h2>
      Guests And Users
    </h2>
  </center>,
  <div
    className="container"
  >
    <div
      className="text"
    />
    <form>
      <input
        onChange={[Function]}
        placeholder="Enter guest name"
        type="text"
      />
      <button
        color="primary"
        onClick={[Function]}
      >
        Send Guest
      </button>
    </form>
  </div>,
]
`;

exports[`takes snapshot of state changes 2`] = `
Array [
  <center>
    <h2>
      Guests And Users
    </h2>
  </center>,
  <div
    className="container"
  >
    <div
      className="text"
    >
      <p>
        My new guest is 
        bar
      </p>
    </div>
    <form>
      <input
        onChange={[Function]}
        placeholder="Enter guest name"
        type="text"
      />
      <button
        color="primary"
        onClick={[Function]}
      >
        Send Guest
      </button>
    </form>
  </div>,
]
`;
